--- a/gallery.css
+++ b/gallery.css
@@ -72,8 +72,8 @@ body {
 }
 
 .photo img {
-    height: 100px;
-    width: 150px;
+    height: 2.6cm;
+    width: 3.9cm;
     border-radius: 10px;
     box-shadow: 0 0 50px black;
 }
